yumrush-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yumrush-deployment
  namespace: yumrush-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: yumrush
  template:
    metadata:
      labels:
        app: yumrush
    spec:
      containers:
        - name: yumrush
          image: milepelivanov02/yumrush:latest
          ports:
            - containerPort: 8080
