yumrush-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: yumrush-service
  namespace: yumrush-namespace
spec:
  type: NodePort
  selector:
    app: yumrush
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      nodePort: 30000
