yumrush-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: yumrush-ingress
  namespace: yumrush-namespace
spec:
  ingressClassName: nginx
  rules:
    - host: yumrush.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: yumrush-service
                port:
                  number: 80
